# Pyjutsu

./: .gitignore  Cargo.toml  README.md  SPEC.md  build.rs  devenv.nix  devenv.yaml  pyproject.toml
.cargo/: config.toml
.scratch/projects/02-pyjutsu-m1-read-layer/: KICKOFF_PROMPT.md  M1_IMPLEMENTATION_GUIDE.md
.scratch/projects/03-pyjutsu-m2-mutations/: M2_CONTINUATION_GUIDE.md  M2_CONTINUATION_KICKOFF.md  M2_IMPLEMENTATION_GUIDE.md  M2_IMPLEMENTATION_KICKOFF.md  M2_SCOPING_KICKOFF.md  M2_SLICE10_GUIDE.md  M2_SLICE10_KICKOFF.md  M2_SLICE11_GUIDE.md  M2_SLICE11_KICKOFF.md  M2_SLICE3_GUIDE.md  M2_SLICE3_KICKOFF.md  M2_SLICE4_GUIDE.md  M2_SLICE4_KICKOFF.md  M2_SLICE5_GUIDE.md  M2_SLICE5_KICKOFF.md  M2_SLICE6_GUIDE.md  M2_SLICE6_KICKOFF.md  M2_SLICE7_GUIDE.md  M2_SLICE7_KICKOFF.md  M2_SLICE8_GUIDE.md  M2_SLICE8_KICKOFF.md  M2_SLICE9_GUIDE.md  M2_SLICE9_KICKOFF.md
.scratch/projects/04-pyjutsu-0.4.0-refinements/: KICKOFF_PROMPT.md  REFINEMENTS_GUIDE.md
.scratch/projects/05-pyjutsu-0.5.0-fidelity-completion/: KICKOFF_PROMPT.md  REFINEMENTS_GUIDE.md
.scratch/projects/06-pyjutsu-0.6.0-diff-surface/: IMPLEMENTATION_GUIDE.md  KICKOFF_PROMPT.md
.scratch/projects/07-pyjutsu-0.7.0-power-surface/: IMPLEMENTATION_GUIDE.md  KICKOFF_PROMPT.md
.scratch/projects/08-pyjutsu-cli-options/: cli-options-overview.md
.scratch/projects/09-pyjutsu-0.7.0-code-review/: CODE_REVIEW.md  REVIEW_REFACTORING_IDEAS.md
.scratch/projects/10-adopt-tag-visibility-and-keep-refs/: issue-overview.md
.scratch/projects/11-transaction-split-binding/: KICKOFF_PROMPT.md  issue-overview.md
.scratch/projects/12-repo-review-and-catch-up/: KICKOFF_PROMPT.md  OVERVIEW.md  PLAN.md
.scratch/projects/13-gitman-trunk-model-bindings/: KICKOFF_PROMPT.md  OVERVIEW.md  PLAN.md
.scratch/projects/14-remaining-gitman-bindings/: KICKOFF_14b.md  OVERVIEW.md
docs/: DEV_GUIDE.md  PYJUTSU_CONCEPT.md  USER_GUIDE.md
nix/: pyjutsu.nix
python/pyjutsu/: __init__.py  _pyjutsu.pyi  errors.py  models.py  repo_view.py  revset.py  transaction.py  workspace.py
src/: convert.rs  diff.rs  diff_stat.rs  errors.rs  lib.rs  repo_view.rs  revset.rs  transaction.rs  workspace.rs
src/pyjutsu/: __init__.py  _commands.py  client.py  enums.py  exceptions.py  models.py
tests/: conftest.py  test_at_operation.py  test_bookmarks.py  test_bookmarks_write.py  test_build.py  test_colocate_exclude.py  test_colocated_sync.py  test_conflicts.py  test_content_relation.py  test_describe.py  test_diff.py  test_diff_stat.py  test_edit_abandon.py  test_git_force_with_lease.py  test_git_interop.py  test_git_net.py  test_git_ref_write.py  test_git_refs.py  test_golden.py  test_init_adopt.py  test_log.py  test_new.py  test_operations.py  test_repo_view.py  test_resolve.py  test_revset_builder.py  test_rewrite.py  test_run_jj.py  test_snapshot.py  test_split.py  test_stale.py  test_stream_log.py  test_tags.py  test_tracked_ignored.py  test_transaction.py  test_try_merge.py  test_undo.py  test_untrack.py  test_workspace_load.py  test_workspace_mgmt.py
tests/diff/: jj_cli.py
tests/golden/: model_fields.json
tests/integration/: test_client_init.py  test_status.py
tests/unit/: test_branches.py  test_commands.py  test_describe_new.py  test_enums.py  test_exceptions.py  test_log.py  test_models.py
