[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyjutsu"
# Pyjutsu is versioned independently of jj; the bound jj-lib is pinned in Cargo.toml + devenv.nix.
version = "0.7.1"
description = "Pythonic + Pydantic binding to jujutsu's jj-lib engine via PyO3."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Bullish Design" },
]
dependencies = [
  "pydantic>=2.12",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]

[tool.maturin]
# Mixed layout: pure-Python package under python/, compiled ext installed as pyjutsu._pyjutsu.
python-source = "python"
module-name = "pyjutsu._pyjutsu"
# Enable the abi3 extension-module build (kept out of Cargo.toml so `cargo test` links libpython).
features = ["pyo3/extension-module"]

[tool.uv]
# maturin is provided by devenv (nix), not pip; don't let uv try to build the project here
# during `uv sync` — dev deps only.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]
